headers/private/kernel/boot/platform.h
@@ -61,6 +61,7 @@ extern status_t platform_add_block_devices(struct stage2_args *args, NodeList *d
 extern status_t platform_get_boot_partitions(struct stage2_args *args, Node *bootDevice,
 					NodeList *partitions, NodeList *bootPartitions);
 extern status_t platform_register_boot_device(Node *device);
+extern void platform_cleanup_devices();
 
 /* menu functions */
 
