src/system/boot/loader/main.cpp
@@ -14,6 +14,7 @@
 #include <boot/heap.h>
 #include <boot/PathBlacklist.h>
 #include <boot/stdio.h>
+#include <boot/net/NetStack.h>
 
 #include "file_systems/packagefs/packagefs.h"
 
@@ -146,7 +147,8 @@ main(stage2_args *args)
 			gKernelArgs.boot_volume = buffer;
 			gKernelArgs.boot_volume_size = gBootVolume.ContentSize();
 
-			// ToDo: cleanup, heap_release() etc.
+			platform_cleanup_devices();
+			// TODO: cleanup, heap_release() etc.
 			heap_print_statistics();
 			platform_start_kernel();
 		}
