src/system/boot/platform/amiga_m68k/devices.cpp
@@ -194,3 +194,8 @@ platform_register_boot_device(Node *device)
 	return B_OK;
 }
 
+
+void
+platform_cleanup_devices()
+{
+}
