src/system/boot/platform/atari_m68k/devices.cpp
@@ -1238,3 +1238,8 @@ platform_register_boot_device(Node *device)
 	return B_OK;
 }
 
+
+void
+platform_cleanup_devices()
+{
+}
