src/system/boot/platform/bios_ia32/devices.cpp
@@ -923,3 +923,8 @@ platform_register_boot_device(Node *device)
 	return B_OK;
 }
 
+
+void
+platform_cleanup_devices()
+{
+}
