src/system/boot/platform/efi/devices.cpp
@@ -522,3 +522,9 @@ platform_register_boot_device(Node *device)
 
 	return B_OK;
 }
+
+
+void
+platform_cleanup_devices()
+{
+}
