src/system/boot/platform/pxe_ia32/devices.cpp
@@ -182,3 +182,10 @@ platform_register_boot_device(Node *device)
 
 	return B_OK;
 }
+
+
+void
+platform_cleanup_devices()
+{
+	net_stack_cleanup();
+}
