src/system/boot/platform/u-boot/devices.cpp
@@ -91,3 +91,9 @@ platform_register_boot_device(Node *device)
 
 	return B_OK;
 }
+
+
+void
+platform_cleanup_devices()
+{
+}
